<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.dsl.classgen</groupId>
	<artifactId>PropsClassGenerator</artifactId>
	<version>1.1</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>Generates Java classes based on properties files.</description>
	<url>https://github.com/GrimReaper3223/PropsClassGenerator</url>

	<licenses>
		<license>
			<name>The GNU General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
		</license>
	</licenses>

	<scm>
		<connection>
			scm:git:https://github.com/GrimReaper3223/PropsClassGenerator.git</connection>
		<developerConnection>
			scm:git:https://github.com/GrimReaper3223/PropsClassGenerator.git</developerConnection>
		<url>https://github.com/GrimReaper3223/PropsClassGenerator/tree/master</url>
	</scm>

	<distributionManagement>
    <snapshotRepository>
      <id>central</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>central</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

	<developers>
		<developer>
			<name>Deiv</name>
			<email>32deiv@gmail.com</email>
			<organization>DataSystemLogics</organization>
			<organizationUrl>https://github.com/GrimReaper3223</organizationUrl>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-symbol-solver-core</artifactId>
			<version>3.27.0</version>
		</dependency>
		<dependency>
			<groupId>org.sonatype.central</groupId>
			<artifactId>central-publishing-maven-plugin</artifactId>
			<version>0.8.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.8.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<source>24</source>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>24</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.7.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>clean</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${user.dir}/src/main/resources/libs</outputDirectory>
							<includeScope>runtime</includeScope>
							<overWriteReleases>true</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<!--<outputDirectory>${user.dir}/src/main/resources/libs</outputDirectory>-->
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>
